# Gateway

./: CMakeLists.txt  README.md
lib/: Common.cpp  Common.hpp
lib/Client/: GatewayClient.cpp  GatewayClient.hpp
lib/Server/: GatewayServer.cpp  GatewayServer.hpp
src/: Client.cpp  Server.cpp
